; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/extr_menu_driver.c_menu_display_font.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/extr_menu_driver.c_menu_display_font.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PATH_MAX_LENGTH = common dso_local global i32 0, align 4
@menu_disp = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @menu_display_font(i32 %0, float %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca float, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store float %1, float* %6, align 4
  store i32 %2, i32* %7, align 4
  %11 = load i32, i32* @PATH_MAX_LENGTH, align 4
  %12 = zext i32 %11 to i64
  %13 = call i8* @llvm.stacksave()
  store i8* %13, i8** %8, align 8
  %14 = alloca i8, i64 %12, align 16
  store i64 %12, i64* %9, align 8
  %15 = load i32, i32* @menu_disp, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %18, label %17

17:                                               ; preds = %3
  store i32* null, i32** %4, align 8
  store i32 1, i32* %10, align 4
  br label %26

18:                                               ; preds = %3
  %19 = getelementptr inbounds i8, i8* %14, i64 0
  store i8 0, i8* %19, align 16
  %20 = trunc i64 %12 to i32
  %21 = load i32, i32* %5, align 4
  %22 = call i32 @fill_pathname_application_special(i8* %14, i32 %20, i32 %21)
  %23 = load float, float* %6, align 4
  %24 = load i32, i32* %7, align 4
  %25 = call i32* @menu_display_font_file(i8* %14, float %23, i32 %24)
  store i32* %25, i32** %4, align 8
  store i32 1, i32* %10, align 4
  br label %26

26:                                               ; preds = %18, %17
  %27 = load i8*, i8** %8, align 8
  call void @llvm.stackrestore(i8* %27)
  %28 = load i32*, i32** %4, align 8
  ret i32* %28
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @fill_pathname_application_special(i8*, i32, i32) #2

declare dso_local i32* @menu_display_font_file(i8*, float, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
